--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwindcss": "^3.4.17",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "fast-xml-parser": "^4.4.0"
+    "fast-xml-parser": "^4.4.0",
+    "@nuxtjs/tailwindcss": "^6.12.2"
   }
 }
