chore: update .env.example and README.md for deployment instructions
- Enhanced .env.example with additional guidance for generating SESSION_SECRET on Windows.
- Expanded README.md to include detailed deployment scenarios for Vercel, self-hosted servers, and Docker, along with environment variable configurations.
- Improved clarity on integrating the authentication system with existing websites.

--- a/.env.example
+++ b/.env.example
@@ -9,13 +9,14 @@
 SITE_URL=https://your-domain.com
 
 # Session加密密钥（生产环境必须使用强随机字符串）
-# 生成命令: openssl rand -hex 32
+# 生成命令: openssl rand -hex 32  (Windows: 在 Git Bash 中执行)
 SESSION_SECRET=your-random-secret-key-change-this
 
 # ============================================
 # 2. 微信公众号配置（必须）
 # ============================================
 # 服务器 Token（与微信后台配置一致，**最重要**）
+# 建议使用复杂字符串，如: wx_auth_token_2024_xxxxx
 WECHAT_TOKEN=your-token
 
 # ============================================
