--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wechat-subscription-auth",
+  "name": "wechat-subscription-auth-v4",
   "private": true,
   "type": "module",
   "scripts": {
@@ -9,19 +9,18 @@
     "generate": "nuxt generate"
   },
   "devDependencies": {
+    "@nuxtjs/tailwindcss": "7.0.0-beta.1",
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^22.10.2",
-    "nuxt": "^3.15.0",
+    "nuxt": "^4.2.2",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^3.2.1"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.12.2",
     "@sqlite.org/sqlite-wasm": "3.51.1-build2",
-    "@tailwindcss/forms": "^0.5.9",
-    "@tailwindcss/typography": "^0.5.15",
-    "fast-xml-parser": "^4.4.0",
-    "h3": "^1.13.0",
-    "ofetch": "^1.4.1",
-    "tailwindcss": "^3.4.17"
+    "fast-xml-parser": "^5.3.3",
+    "ofetch": "^1.4.1"
   }
 }
