更新 package.json，添加多个微信相关标签以增强 SDK 的描述性和可用性

--- a/wx-auth-sdk/package.json
+++ b/wx-auth-sdk/package.json
@@ -23,7 +23,17 @@
     "auth",
     "subscription",
     "sdk",
-    "微信认证"
+    "微信认证",
+    "订阅号",
+    "公众号",
+    "微信",
+    "认证",
+    "订阅号认证",
+    "公众号认证",
+    "微信认证",
+    "微信订阅号认证",
+    "微信订阅号认证系统",
+    "微信订阅号认证SDK"
   ],
   "author": "",
   "license": "MIT",
